<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/play"
        android:id="@+id/play_btn"
        android:textColor="@color/color_back"
        android:layout_marginStart="@dimen/margin_start_end_button"
        android:layout_marginEnd="@dimen/margin_start_end_button"
        android:layout_marginBottom="@dimen/margin_for_button_im_main_menu"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:id="@+id/score_btn"
        android:text="@string/score"
        android:textColor="@color/color_back"
        android:layout_marginStart="@dimen/margin_start_end_button"
        android:layout_marginEnd="@dimen/margin_start_end_button"
        android:layout_marginBottom="@dimen/margin_for_button_im_main_menu"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/how_to_play"
        android:textColor="@color/color_back"
        android:layout_marginStart="@dimen/margin_start_end_button"
        android:layout_marginEnd="@dimen/margin_start_end_button"
        android:layout_marginBottom="@dimen/margin_for_button_im_main_menu"
        android:id="@+id/how_to_play_btn"/>

</LinearLayout>